--add-exports